k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-descuentos
  labels:
    app: front-descuentos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-descuentos
  template:
    metadata:
      labels:
        app: front-descuentos
    spec:
      containers:
      - name: front-descuentos
        image: <IMAGE>
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 100m
