k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-descuentos-svc
  labels:
    app: front-descuentos
spec:
  type: ClusterIP
  selector:
    app: front-descuentos
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
