k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-descuentos-ing
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - descuentos.tssw.info
    secretName: cert-front-descuentos
  rules:
    - host: descuentos.tssw.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-descuentos-svc
                port:
                  number: 80
